volver a poner los arcticles

--- a/Entrega_1/index.html
+++ b/Entrega_1/index.html
@@ -23,7 +23,7 @@
         <div class="content-container">
             <main>
                 <section>
-                    <!--<article>
+                    <article>
                         <h2>This is an Article</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Euismod in pellentesque massa placerat duis ultricies lacus. Vulputate mi sit amet mauris commodo quis. Imperdiet proin fermentum leo vel orci porta non pulvinar neque. Fringilla est ullamcorper eget nulla. Augue interdum velit euismod in pellentesque massa. Diam quam nulla porttitor massa id neque aliquam vestibulum morbi. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Donec pretium vulputate sapien nec sagittis aliquam. Sit amet justo donec enim diam. </p>
 
@@ -35,8 +35,8 @@
 
                         <p>Auctor eu augue ut lectus arcu bibendum at varius. Tortor condimentum lacinia quis vel. Sed nisi lacus sed viverra tellus in hac. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Scelerisque in dictum non consectetur a erat nam at lectus. Eu lobortis elementum nibh tellus molestie. Purus ut faucibus pulvinar elementum integer. Purus sit amet luctus venenatis lectus. Lectus urna duis convallis convallis tellus id interdum. Feugiat nisl pretium fusce id velit ut tortor. Id nibh tortor id aliquet lectus proin nibh nisl.</p>
 
-                    </article>-->
-                    <!--<article>
+                    </article>
+                    <article>
                         <h2>This is another Article</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Euismod in pellentesque massa placerat duis ultricies lacus. Vulputate mi sit amet mauris commodo quis. Imperdiet proin fermentum leo vel orci porta non pulvinar neque. Fringilla est ullamcorper eget nulla. Augue interdum velit euismod in pellentesque massa. Diam quam nulla porttitor massa id neque aliquam vestibulum morbi. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Donec pretium vulputate sapien nec sagittis aliquam. Sit amet justo donec enim diam. </p>
 
@@ -47,7 +47,7 @@
                         <p>Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Fermentum odio eu feugiat pretium nibh ipsum consequat. Et tortor at risus viverra adipiscing. Sed enim ut sem viverra aliquet eget. Venenatis urna cursus eget nunc scelerisque viverra. Risus in hendrerit gravida rutrum quisque. Consequat nisl vel pretium lectus quam id leo in. Tellus pellentesque eu tincidunt tortor aliquam. At lectus urna duis convallis convallis tellus id interdum velit. Sodales neque sodales ut etiam sit. Sagittis eu volutpat odio facilisis. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Donec massa sapien faucibus et molestie ac. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Consectetur libero id faucibus nisl tincidunt eget nullam non nisi. Lectus urna duis convallis convallis tellus.</p>
 
                         <p>Auctor eu augue ut lectus arcu bibendum at varius. Tortor condimentum lacinia quis vel. Sed nisi lacus sed viverra tellus in hac. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Scelerisque in dictum non consectetur a erat nam at lectus. Eu lobortis elementum nibh tellus molestie. Purus ut faucibus pulvinar elementum integer. Purus sit amet luctus venenatis lectus. Lectus urna duis convallis convallis tellus id interdum. Feugiat nisl pretium fusce id velit ut tortor. Id nibh tortor id aliquet lectus proin nibh nisl.</p>
-                    </article>-->
+                    </article>
                 </section>
             </main>
             <aside>
