añadir las movidas opcionales

--- a/Entrega_1/index.html
+++ b/Entrega_1/index.html
@@ -26,14 +26,15 @@
                     <article>
                         <h2>This is an Article</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pharetra pharetra massa massa ultricies mi quis hendrerit dolor magna. Euismod in pellentesque massa placerat duis ultricies lacus. Vulputate mi sit amet mauris commodo quis. Imperdiet proin fermentum leo vel orci porta non pulvinar neque. Fringilla est ullamcorper eget nulla. Augue interdum velit euismod in pellentesque massa. Diam quam nulla porttitor massa id neque aliquam vestibulum morbi. Iaculis eu non diam phasellus vestibulum lorem sed risus ultricies. Pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu vitae. Donec pretium vulputate sapien nec sagittis aliquam. Sit amet justo donec enim diam. </p>
+                        <dl class="dictionary-list">
+                            <dt>Termino 1</dt>
+                            <dd>Definición del termino 1</dd>
+                            <dt>Termino 2</dt>
+                            <dd>Definición del termino 2</dd>
+                            <dt>Termino 3</dt>
+                            <dd>Definición del termino 3</dd>
+                        </dl>
 
-                        <p>Volutpat est velit egestas dui id ornare arcu. Lorem donec massa sapien faucibus et molestie ac feugiat. Nisi vitae suscipit tellus mauris. Mi sit amet mauris commodo quis imperdiet massa. Pulvinar etiam non quam lacus suspendisse. Quis hendrerit dolor magna eget est lorem ipsum dolor sit. Ipsum suspendisse ultrices gravida dictum fusce ut placerat orci nulla. Blandit turpis cursus in hac. Id neque aliquam vestibulum morbi blandit cursus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Senectus et netus et malesuada fames ac. In metus vulputate eu scelerisque felis imperdiet proin. Ornare quam viverra orci sagittis eu. Quis imperdiet massa tincidunt nunc. Habitant morbi tristique senectus et netus et malesuada fames ac. Ultrices neque ornare aenean euismod elementum nisi quis eleifend. Erat imperdiet sed euismod nisi porta lorem mollis aliquam. Nulla facilisi nullam vehicula ipsum a arcu. Vitae congue eu consequat ac felis donec et odio pellentesque. Pretium quam vulputate dignissim suspendisse in est ante in.</p>
-
-                        <p>Morbi tristique senectus et netus et malesuada fames ac turpis. Malesuada fames ac turpis egestas. Tempor id eu nisl nunc. Urna id volutpat lacus laoreet non curabitur gravida. Sed velit dignissim sodales ut eu. Cras sed felis eget velit aliquet sagittis. Lectus arcu bibendum at varius vel pharetra vel. Id consectetur purus ut faucibus pulvinar elementum integer. Viverra aliquet eget sit amet. In vitae turpis massa sed elementum. Convallis convallis tellus id interdum velit. Neque ornare aenean euismod elementum nisi quis eleifend quam. Tellus in metus vulputate eu scelerisque felis imperdiet proin fermentum. Id cursus metus aliquam eleifend. Amet risus nullam eget felis. Maecenas ultricies mi eget mauris pharetra et ultrices. Aliquam sem fringilla ut morbi. Euismod nisi porta lorem mollis aliquam ut. Nec feugiat in fermentum posuere urna nec tincidunt praesent semper.</p>
-
-                        <p>Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Fermentum odio eu feugiat pretium nibh ipsum consequat. Et tortor at risus viverra adipiscing. Sed enim ut sem viverra aliquet eget. Venenatis urna cursus eget nunc scelerisque viverra. Risus in hendrerit gravida rutrum quisque. Consequat nisl vel pretium lectus quam id leo in. Tellus pellentesque eu tincidunt tortor aliquam. At lectus urna duis convallis convallis tellus id interdum velit. Sodales neque sodales ut etiam sit. Sagittis eu volutpat odio facilisis. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Donec massa sapien faucibus et molestie ac. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Consectetur libero id faucibus nisl tincidunt eget nullam non nisi. Lectus urna duis convallis convallis tellus.</p>
-
-                        <p>Auctor eu augue ut lectus arcu bibendum at varius. Tortor condimentum lacinia quis vel. Sed nisi lacus sed viverra tellus in hac. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Scelerisque in dictum non consectetur a erat nam at lectus. Eu lobortis elementum nibh tellus molestie. Purus ut faucibus pulvinar elementum integer. Purus sit amet luctus venenatis lectus. Lectus urna duis convallis convallis tellus id interdum. Feugiat nisl pretium fusce id velit ut tortor. Id nibh tortor id aliquet lectus proin nibh nisl.</p>
 
                     </article>
                     <article>
@@ -44,13 +45,11 @@
 
                         <p>Morbi tristique senectus et netus et malesuada fames ac turpis. Malesuada fames ac turpis egestas. Tempor id eu nisl nunc. Urna id volutpat lacus laoreet non curabitur gravida. Sed velit dignissim sodales ut eu. Cras sed felis eget velit aliquet sagittis. Lectus arcu bibendum at varius vel pharetra vel. Id consectetur purus ut faucibus pulvinar elementum integer. Viverra aliquet eget sit amet. In vitae turpis massa sed elementum. Convallis convallis tellus id interdum velit. Neque ornare aenean euismod elementum nisi quis eleifend quam. Tellus in metus vulputate eu scelerisque felis imperdiet proin fermentum. Id cursus metus aliquam eleifend. Amet risus nullam eget felis. Maecenas ultricies mi eget mauris pharetra et ultrices. Aliquam sem fringilla ut morbi. Euismod nisi porta lorem mollis aliquam ut. Nec feugiat in fermentum posuere urna nec tincidunt praesent semper.</p>
 
-                        <p>Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula. Fermentum odio eu feugiat pretium nibh ipsum consequat. Et tortor at risus viverra adipiscing. Sed enim ut sem viverra aliquet eget. Venenatis urna cursus eget nunc scelerisque viverra. Risus in hendrerit gravida rutrum quisque. Consequat nisl vel pretium lectus quam id leo in. Tellus pellentesque eu tincidunt tortor aliquam. At lectus urna duis convallis convallis tellus id interdum velit. Sodales neque sodales ut etiam sit. Sagittis eu volutpat odio facilisis. Sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Donec massa sapien faucibus et molestie ac. Eget felis eget nunc lobortis mattis aliquam faucibus purus. Consectetur libero id faucibus nisl tincidunt eget nullam non nisi. Lectus urna duis convallis convallis tellus.</p>
-
-                        <p>Auctor eu augue ut lectus arcu bibendum at varius. Tortor condimentum lacinia quis vel. Sed nisi lacus sed viverra tellus in hac. Tempus imperdiet nulla malesuada pellentesque elit eget gravida cum sociis. Scelerisque in dictum non consectetur a erat nam at lectus. Eu lobortis elementum nibh tellus molestie. Purus ut faucibus pulvinar elementum integer. Purus sit amet luctus venenatis lectus. Lectus urna duis convallis convallis tellus id interdum. Feugiat nisl pretium fusce id velit ut tortor. Id nibh tortor id aliquet lectus proin nibh nisl.</p>
                     </article>
                 </section>
             </main>
             <aside>
+                <img class="aside-image" src="images/arroba.JPEG" alt="imagen del aside">
                 <h3>This is Aside content</h3>
                 <ul class="aside-menu">
                     <li><a href="#">Enlace 1</a></li>
