--- a/Entrega_1/index.html
+++ b/Entrega_1/index.html
@@ -49,7 +49,7 @@
                 </section>
             </main>
             <aside>
-                <img class="aside-image" src="images/arroba.JPEG" alt="imagen del aside">
+                <img class="aside-image" src="images/IMG_4141.JPG" alt="imagen del aside">
                 <h3>This is Aside content</h3>
                 <ul class="aside-menu">
                     <li><a href="#">Enlace 1</a></li>
