añadir script al html

--- a/Entrega_2/html/index.html
+++ b/Entrega_2/html/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
+        <script src="../js/script.js"></script>
         <header>
             <h1 class="page-title">Entrega 1 | Unai Bermudez</h1>
         </header>
