arreglado el tamaño del carrito

--- a/Entrega_4/public/index.html
+++ b/Entrega_4/public/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="tienda">
+			<div class="tienda" id="tienda">
 				<header>
 					<h1>David & Unai Shop</h1>
 				</header>
@@ -28,7 +28,6 @@
 				<h2>Carrito de Compra</h2>
 				<div id="carrito-lista"></div> 
 			</div>
-            
 		</div>
 	</body>
 </html>
