Cambios con el hover en el carrito

--- a/Entrega_4/public/index.html
+++ b/Entrega_4/public/index.html
@@ -2,31 +2,32 @@
 <html>
 	<head>
 		<meta charset="utf-8"> 
-		<title>La tienda de David</title>
+		<title>La tienda de David & Unai</title>
         <link rel="stylesheet" type="text/css" href="css/styles.css">
 		<script type="module" src="js/main.js"></script>
 	</head>
 	<body>
 		<div class="container">
-			<header>
-				<h1>Deivid Shop</h1>
-			</header>
-			<main>
-				<section id="raquetasDeTenis">
-					<h1>Raquetas de Tenis</h1>
-				</section>
-				<section id="Zapatillas">
-					<h1>Zapatillas</h1>
-				</section>
-				<section id="Camisetas">
-					<h1>Camisetas</h1>
-				</section>
-			</main>
+			<div class="tienda" id="tienda">
+				<header>
+					<h1>David & Unai Shop</h1>
+				</header>
+				<main>
+					<section id="raquetasDeTenis">
+						<h1>Raquetas de Tenis</h1>
+					</section>
+					<section id="Zapatillas">
+						<h1>Zapatillas</h1>
+					</section>
+					<section id="Camisetas">
+						<h1>Camisetas</h1>
+					</section>
+				</main>
+			</div>
 			<div class="carrito" id="carrito" style="visibility: hidden;">
-                <h2>Carrito de Compra</h2>
-                <div id="carrito-lista"></div> <!-- Agrega este div -->
-            </div>
-            
+				<h2>Carrito de Compra</h2>
+				<div id="carrito-lista"></div> 
+			</div>
 		</div>
 	</body>
 </html>
