Apartados d y e, falta el b

--- a/Entrega_7/index.html
+++ b/Entrega_7/index.html
@@ -1,26 +1,27 @@
 <!doctype html>
 <html lang="es">
 <head>
-	<title>Video + Canvas</title>
-	<meta charset="utf-8">
-	<script src="js/videocanvas.js"></script>
-	<link rel="stylesheet" href="css/videocanvas.css">
-	<script src="js/videocanvas.js"></script>
+    <title>Video + Canvas</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/videocanvas.css">
 </head>
 <body>
 
-	<form>
-		<input type="button" id="byn" value="B&N">
-		<input type="button" id="normal" value="Normal">
-		<input type="button" id="pausa" value="Pausa">
-		<input type="button" id="cienciaFiccion" value="CienciaFicción">
-	</form>
+    <form>
+        <input type="button" id="byn" value="B&N">
+        <input type="button" id="normal" value="Normal">
+        <input type="button" id="pausa" value="Pausa">
+        <input type="button" id="cienciaFiccion" value="CienciaFicción">
+        <input type="button" id="pip" value="Picture in Picture">
+        <input type="button" id="playAudio" value="Reproducir Audio">
+    </form>
 
-	<div id="videoDiv">
-		<video id="video" width="720" height="480"> </video>
-		<canvas id="buffer" width="720" height="480"></canvas>
-		<canvas id="display" width="720" height="480"></canvas>
-	</div>
+    <div id="videoDiv">
+        <video id="video" width="720" height="480"> </video>
+        <canvas id="buffer" width="720" height="480"></canvas>
+        <canvas id="display" width="720" height="480"></canvas>
+    </div>
 
+    <script src="js/videocanvas.js"></script>
 </body>
 </html>
