añadir boton de rotar que no funciona y pruebas con rotate canvas

--- a/Entrega_7/index.html
+++ b/Entrega_7/index.html
@@ -12,8 +12,9 @@
         <input type="button" id="normal" value="Normal">
         <input type="button" id="pausa" value="Pausa">
         <input type="button" id="cienciaFiccion" value="CienciaFicción">
-        <input type="button" id="pip" value="Picture in Picture">
+        <input type="button" id="rotar" value="Rotar">
         <input type="button" id="playAudio" value="Reproducir Audio">
+        <input type="button" id="pip" value="Picture in Picture">
     </form>
 
     <div id="videoDiv">
