Estilos y mensajes de error debajo de input

--- a/Entrega_8/index.html
+++ b/Entrega_8/index.html
@@ -12,22 +12,27 @@
         <div>
             <label for="name">Nombre:</label>
             <input type="text" id="name" placeholder="Introduce tu nombre" autofocus>
+            <div id="nameError" class="error"></div>
         </div>
         <div>
             <label for="phone">Teléfono:</label>
             <input type="tel" id="phone" placeholder="123-456-789">
+            <div id="phoneError" class="error"></div>
         </div>
         <div>
             <label for="email">E-mail:</label>
             <input type="email" id="email" placeholder="correo@ejemplo.com">
+            <div id="emailError" class="error"></div>
         </div>
         <div>
             <label for="books">Libros:</label>
             <input type="text" id="books" placeholder="Selecciona un libro">
+            <div id="booksError" class="error"></div>
         </div>
         <div>
             <label for="quantity">Cantidad:</label>
             <input type="number" id="quantity" placeholder="1" min="1" max="5">
+            <div id="quantityError" class="error"></div>
         </div>
         <div>
             <label for="file">File Upload:</label>
