cambiar titulos html

--- a/Entrega_9/public/index.html
+++ b/Entrega_9/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Formulario Drag & Drop</h1>
+    <h1>Formulario Drag & Drop - Entrega 9</h1>
     <form id="myForm">
         <div>
             <label for="name">Nombre:</label>
