--- a/Entrega_10/public/index.html
+++ b/Entrega_10/public/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Post-its</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="postits.css">
-    <script src="postits.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     <form>
