--- a/Entrega_11/public/email-password.html
+++ b/Entrega_11/public/email-password.html
@@ -25,17 +25,29 @@ limitations under the License.
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="stylesheets/main.css">
 
   <!-- Import and configure the Firebase SDK -->
   <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
   <!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
-  <script src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
-  <script src="/__/firebase/9.14.0/firebase-auth-compat.js"></script>
-  <script src="/__/firebase/init.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.14.0/firebase-auth-compat.js"></script>
+
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyBr0M8OnCQ00HsdqUSaBKnjMXBG-fsi5mw",
+      authDomain: "dawe-55ca2.firebaseapp.com",
+      projectId: "dawe-55ca2"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
 
   <script type="text/javascript">
-
+    if (window.location.search.includes('logout')) {
+      firebase.auth().signOut();
+    }
     /**
      * Handles the sign in button press.
      */
@@ -150,6 +162,26 @@ limitations under the License.
           if (!emailVerified) {
             document.getElementById('quickstart-verify-email').disabled = false;
           }
+          firebase.auth().currentUser.getIdToken(/* forceRefresh */ true).then(function(idToken) {
+            console.log(idToken);
+
+            fetch('/getToken', {
+              method: 'post',
+              headers: {'Content-Type': 'application/json'},
+              body: `{"idToken" : "${idToken}"}`
+            }).then(function(response) {
+              if (response.status === 302) {
+                window.location.href = '/users'
+              }
+              return response;
+            }).then(function(data) {
+              console.log('Created with status: ' + data.status );
+            });
+
+            
+          }).catch(function(error) {
+            // Handle error
+          });
         } else {
           // User is signed out.
           document.getElementById('quickstart-sign-in-status').textContent = 'Signed out';
