--- a/Entrega_11/public/email-password.html
+++ b/Entrega_11/public/email-password.html
@@ -35,9 +35,9 @@ limitations under the License.
 
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyBr0M8OnCQ00HsdqUSaBKnjMXBG-fsi5mw",
-      authDomain: "dawe-55ca2.firebaseapp.com",
-      projectId: "dawe-55ca2"
+      apiKey: "AIzaSyCoQfSyGU0P72ur_uuf3m0klgCiMfmsN4I",
+      authDomain: "dawe-8739d.firebaseapp.com",
+      projectId: "dawe-8739d"
     };
 
     // Initialize Firebase
