add my api keys 2

--- a/Entrega_11/public/users.html
+++ b/Entrega_11/public/users.html
@@ -10,9 +10,9 @@
     <!-- Initialize Firebase -->
     <script>
         var firebaseConfig = {
-            apiKey: "AIzaSyBr0M8OnCQ00HsdqUSaBKnjMXBG-fsi5mw",
-            authDomain: "dawe-55ca2.firebaseapp.com",
-            projectId: "dawe-55ca2"
+            apiKey: "AIzaSyCoQfSyGU0P72ur_uuf3m0klgCiMfmsN4I",
+            authDomain: "dawe-8739d.firebaseapp.com",
+            projectId: "dawe-8739d"
         };
         firebase.initializeApp(firebaseConfig);
     </script>
