--- a/Entrega_11/public/email-password.html
+++ b/Entrega_11/public/email-password.html
@@ -1,3 +1,4 @@
+<!-- email-password.html -->
 <!DOCTYPE html>
 <!--
 Copyright (c) 2016 Google Inc.
@@ -25,7 +26,7 @@ limitations under the License.
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 
-  <link rel="stylesheet" href="stylesheets/main.css">
+  <link rel="stylesheet" href="stylesheet/main.css">
 
   <!-- Import and configure the Firebase SDK -->
   <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
@@ -45,9 +46,7 @@ limitations under the License.
   </script>
 
   <script type="text/javascript">
-    if (window.location.search.includes('logout')) {
-      firebase.auth().signOut();
-    }
+
     /**
      * Handles the sign in button press.
      */
@@ -66,7 +65,12 @@ limitations under the License.
           return;
         }
         // Sign in with email and pass.
-        firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
+        firebase.auth().signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          // Inicio de sesión exitoso, redirigir a la página de usuarios
+          window.location.href = '/users';
+        })
+        .catch(function(error) {
           // Handle Errors here.
           var errorCode = error.code;
           var errorMessage = error.message;
@@ -170,15 +174,18 @@ limitations under the License.
               headers: {'Content-Type': 'application/json'},
               body: `{"idToken" : "${idToken}"}`
             }).then(function(response) {
-              if (response.status === 302) {
-                window.location.href = '/users'
-              }
-              return response;
+              return response.json();
             }).then(function(data) {
               console.log('Created with status: ' + data.status );
             });
 
-            
+            //
+            // // Send token to your backend via HTTPS
+            // 	const enlace = document.createElement("a");
+            // 	enlace.setAttribute('href', 'http://localhost:5000/'+idToken);
+            //   	var createAText = document.createTextNode('token');
+            //   	enlace.appendChild(createAText);
+            // document.getElementById('quickstart-account-details').appendChild( enlace );
           }).catch(function(error) {
             // Handle error
           });
