--- a/Entrega_15/public/index.html
+++ b/Entrega_15/public/index.html
@@ -6,38 +6,125 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Entrega 15!!</title>
     <link rel="shortcut icon" href="images/logo.png">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<body>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<body >
+    <div class=" vh-100 container border border-secondary ">
+        <div class="content-container" alt="navbar & header">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Logo</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex ms-auto">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-secondary" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+            <header class="d-flex justify-content-center align-items-center border-top border-bottom border-white">
+                <h1>Entrega bootstrap | David & Unai</h1>
+            </header>
+        </div>
+        <div class="container mt-3" alt="grid">
+            <div class="content-container">
+                <div class="row">
+                    <aside class="col-3 border-end h-100">
+                        <!-- Jumbotron con una lista de 3 elementos -->
+                        <div class="jumbotron border border-white mt-3">
+                            <h1 class="display-6 d-flex justify-content-center align-items-center ">
+                                Jumbotron
+                            </h1>
+
+                            <ul class="list-group d-flex justify-content-center m-2">
+                                <li class="list-group-item">Elemento 1</li>
+                                <li class="list-group-item">Elemento 2</li>
+                                <li class="list-group-item">Elemento 3</li>
+                            </ul>
+                        </div>
+
+                        
+                        <!-- Lista con hover y encabezado -->
+                        <h2 class="display-6 d-flex justify-content-center align-items-center m-2 border-bottom border-white">
+                            Lista
+                        </h2>
+                        <ul class="list-group">
+                            <li class="list-group-item list-group-item-action">Elemento 1</li>
+                            <li class="list-group-item list-group-item-action">Elemento 2</li>
+                            <li class="list-group-item list-group-item-action">Elemento 3</li>
+                            <li class="list-group-item list-group-item-action">Elemento 4</li>
+                            <li class="list-group-item list-group-item-action">Elemento 5</li>
+                            <li class="list-group-item list-group-item-action">Elemento 6</li>
+                            <li class="list-group-item list-group-item-action">Elemento 7</li>
+                            <li class="list-group-item list-group-item-action">Elemento 8</li>
+                        </ul>
+                        
+                        <!-- Menú dropdown -->
+                        <div class="dropdown mt-3">
+                            <button class="btn btn-secondary dropdown-toggle w-100" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                Dropdown
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <li><a class="dropdown-item" href="#">Acción</a></li>
+                                <li><a class="dropdown-item" href="#">Otra acción</a></li>
+                                <li><a class="dropdown-item" href="#">Algo más aquí</a></li>
+                            </ul>
+                        </div>
+                    </aside>
+                    <main class="col-9">
+                        <section>
+                            <h2 class="display-6 d-flex justify-content-left align-items-center m-2 border-bottom border-white">
+                                Sección 1
+                            </h2>
+                            <article class="border rounded border-white p-3 mb-3">
+                                <h2 class="border-bottom pb-2">Encabezado del artículo 1</h2>
+                                <p>hola</p>
+                                <footer class="border-top pt-2 text-end small">Footer del artículo 1</footer>
+                            </article>
+                            <article class="border rounded border-white p-3 mb-3">
+                                <h2 class="border-bottom pb-2">Encabezado del artículo 2</h2>
+                                <p>hola</p>
+                                <footer class="border-top pt-2 text-end small">Footer del artículo 2</footer>
+                            </article>
+                            <article class="border rounded border-white p-3 mb-3">
+                                <h2 class="border-bottom pb-2">Encabezado del artículo 3</h2>
+                                <p>hola</p>    
+                                <footer class="border-top pt-2 text-end small">Footer del artículo 3</footer>
+                            </article>
+                        </section>
+
+                        <section>
+                            <h2 class="display-6 d-flex justify-content-left align-items-center m-2 border-bottom border-white">
+                                Sección 2
+                            </h2>
+                            <article class="border rounded border-white p-3 mb-3">
+                                <h2 class="border-bottom pb-2">Encabezado del artículo 4</h2>
+                                <p>hola</p>
+                                <footer class="border-top pt-2 text-end small">Footer del artículo 4</footer>
+                            </article>
+                        </section>
+                    </main>
                 </div>
             </div>
-        </nav>
-        <header class="border-top border-bottom border-white">
-            <h1>Mundo Crypto</h1>
-        </header>
+        </div>
+        <footer class="border-white mt-5 ">
+            <p class="text-center text-white">Footer</p>
+        </footer>
     </div>
 </body>
 </html>
