--- a/Entrega_15/public/index.html
+++ b/Entrega_15/public/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<body >
-    <div class=" vh-100 container border border-secondary ">
+<body>
+    <div class="h-100 container border border-secondary overflow-auto">
         <div class="content-container" alt="navbar & header">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid">
@@ -41,7 +41,7 @@
                 <h1>Entrega bootstrap | David & Unai</h1>
             </header>
         </div>
-        <div class="container mt-3" alt="grid">
+        <div class="container mt-3 h-auto" alt="grid">
             <div class="content-container">
                 <div class="row">
                     <aside class="col-3 border-end h-100">
