--- a/Entrega_15/public/index.html
+++ b/Entrega_15/public/index.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <aside class="col-3 border-end h-100">
                         <!-- Jumbotron con una lista de 3 elementos -->
-                        <div class="jumbotron border border-white mt-3">
+                        <div class="jumbotron border border-white rounded mt-3">
                             <h1 class="display-6 d-flex justify-content-center align-items-center ">
                                 Jumbotron
                             </h1>
